# Embodied_FOC

./: CMakeLists.txt  README.md  README.zh-CN.md
Python/: export_onnx.py  resnet18.onnx  test.py
include/: compile_time_utils.h  data_hub.h  double_buffer.h  foc_math.h  tensor.h
src/: demo_constexpr.cpp  demo_double_buffer.cpp  demo_loop_unroller.cpp  main.cpp  math_magic.cpp  tensor.cpp
